--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
 .App {
   text-align: center;
+  background-color: blue;
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+.Todolist{
+  width: 400px;
+  height: 80vh;
+  border: 2px solid black;
+  margin: auto;
+  background-color: aquamarine;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.todo{
+  width:100%;
+  height: 2rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.buttonss{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+button{
+  margin-right: 10px;
 }
